# fast_api_dunossauro

./: README.md
fastapi_zero/: .coverage  README.md  pyproject.toml
fastapi_zero/fastapi_zero/: app.py  models.py  schemas.py
fastapi_zero/tests/: test_app.py
